test/corpus/comments.txt
========
comments
========

# anything else here should be ignored

---

(program (comment))

===================
empty block comment
===================

=begin
=end

---

(program (comment))

======================
one-line block comment
======================

=begin
whatever
=end

---

(program (comment))

======================================
block comment with comment after begin
======================================

=begin rdoc
=end

---

(program (comment))

======================================
block comment with comment after end
======================================

=begin 
=end rdoc

---

(program (comment))

=========================
multi-line block comments
=========================

=begin
whatever
multiple lines of whatever
=end

---

(program (comment))

=========================
multi-line block comments followed by standard comment
=========================

=begin
whatever
multiple lines of whatever
=end
# Another comment

---

(program (comment) (comment))

=========================
multi-line block comments with almost end
=========================

=begin
=e
=en
=end

---

(program (comment))

=================================================
block comment terminator must start at line start
=================================================

=begin
hello
world =end
  =end
=end
after

---

(program
  (comment)
  (identifier))

==========================================
block comment terminator requires boundary
==========================================

=begin
=endish
=end
after

---

(program
  (comment)
  (identifier))

=======================================
comment within method-call continuation
=======================================

receiver
# comment
.method

---

(program
  (call
    receiver: (identifier)
    (comment)
    method: (identifier)))

================================================
syntax error does not swallow later declarations
================================================

@
class Later
end

def later
end

---

(program
  (ERROR
    (UNEXPECTED '\n'))
  (class
    (constant))
  (method
    (identifier)))

=========================
block comment without newline after end
=========================

=begin
comment
=end
---

(program (comment))
